tests/externInfo/dhrystone-exported/db/invalid/path/strcpy_x.c.loc
67.6.0.9609 68.8.0.9613 69.8.0.9621 69.8.1.9621 70.14.0.9655 71.14.0.9661 